<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="220dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title_delete"
        android:text="@string/doyouwantdelete"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/df_cancel"
            android:text="@string/cancel"
            android:background="#757575"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/df_ok"
            android:text="@string/ok"
            android:background="#2E7D32"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp" />
    </LinearLayout>

</LinearLayout>